Fixing tickets form align and schedule time size

--- a/sass/02-base/_08-media.scss
+++ b/sass/02-base/_08-media.scss
@@ -11,3 +11,11 @@
 .custom-logo-link {
 	display: inline-block;
 }
+
+/* YouTube notation on the live chat embed */
+.wp-block-wordcamp-youtube-live-chat-embed__availability-warning {
+    font-style: normal;
+    font-size: .875rem;
+    border-left: .25rem solid $color__secondary;
+    padding-left: .5rem;
+}
